Fix: fixes css link

--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html>
  <head>
    <title>Quiz Web App</title>
-   <link rel="stylesheet" type="text/css" href="mystyle.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <script src="myScript.js"></script>
  </head>
  <body>
-   <h1>Hello, World</h1>
-   
-     Welcome to my web page.  This
-     web page is a demonstration of
-     jQuery.
-   </p>
-   <p </p>
-   <p </p>
-   <p </p>
-   
+   <h1>Quiz App</h1>
+   <p> Welcome to the quiz app.</p>
+   <button id="hide">Hide</button>
+<button id="show">Show</button>
+
+<button>Click to fade in boxes</button><br><br>
+
+<div id="div1"></div>
+
  </body>
 </html>
