--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
     <button id="check-answer2">Check Answer</button>
     <div id="result"></div>
+	
+	    <h4>Question 2: What is 3x17?</h4>
+        <label><input type="radio" name="q3" value="36"> 36</label><br>
+        <label><input type="radio" name="q3" value="68"> 68</label><br>
+        <label><input type="radio" name="q3" value="49"> 49</label><br>
+	    <label class="correct"><input type="radio" name="q3" value="51"> 51</label><br>
+
+    <button id="check-answer3">Check Answer</button>
+    <div id="result"></div>
 
 
 
