Feat: add 4th quiz question script

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
 
    <h1> Welcome to the Math Quiz.</h1>
-
+  
 
         <h4>Question 1: What is 20+35?</h4>
         <label><input type="radio" name="q1" value="21"> 21</label><br>
@@ -19,6 +19,9 @@
 
     <button id="check-answer">Check Answer</button>
     <div id="result"></div>
+	<br>
+	<br>
+	<br>
 	
         <h4>Question 2: What is 17+59?</h4>
         <label><input type="radio" name="q2" value="81"> 81</label><br>
@@ -28,8 +31,11 @@
 
     <button id="check-answer2">Check Answer</button>
     <div id="result"></div>
+	<br>
+	<br>
+	<br>
 	
-	    <h4>Question 2: What is 3x17?</h4>
+	    <h4>Question 3: What is 3x17?</h4>
         <label><input type="radio" name="q3" value="36"> 36</label><br>
         <label><input type="radio" name="q3" value="68"> 68</label><br>
         <label><input type="radio" name="q3" value="49"> 49</label><br>
@@ -37,6 +43,21 @@
 
     <button id="check-answer3">Check Answer</button>
     <div id="result"></div>
+	<br>
+	<br>
+	<br>
+	
+	 <h4>Question 4: What is 28x7?</h4>
+        <label class="correct"><input type="radio" name="q4" value="196"> 196 </label><br>
+        <label><input type="radio" name="q4" value="92"> 92</label><br>
+        <label><input type="radio" name="q4" value="178"> 178</label><br>
+	    <label><input type="radio" name="q4" value="214"> 214</label><br>
+
+    <button id="check-answer4">Check Answer</button>
+    <div id="result"></div>
+	<br>
+	<br>
+	<br>
 
 
 
