--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label><input type="radio" name="q1" value="45"> 45</label><br>
 
     <button id="check-answer">Check Answer</button>
-    <div id="result"></div>
+    <div id="result1"></div>
 	<br>
 	<br>
 	<br>
@@ -30,7 +30,7 @@
         <label><input type="radio" name="q2" value="79"> 79</label><br>
 
     <button id="check-answer2">Check Answer</button>
-    <div id="result"></div>
+    <div id="result2"></div>
 	<br>
 	<br>
 	<br>
@@ -42,7 +42,7 @@
 	    <label class="correct"><input type="radio" name="q3" value="51"> 51</label><br>
 
     <button id="check-answer3">Check Answer</button>
-    <div id="result"></div>
+    <div id="result3"></div>
 	<br>
 	<br>
 	<br>
@@ -54,7 +54,7 @@
 	    <label><input type="radio" name="q4" value="214"> 214</label><br>
 
     <button id="check-answer4">Check Answer</button>
-    <div id="result"></div>
+    <div id="result4"></div>
 	<br>
 	<br>
 	<br>
